fix: fix item service unit tests